# recipya-rs

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  Taskfile.yaml  build.rs  diesel.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  clean_test_dbs.sh  devcontainer.json  docker-compose.yaml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  recipe.rs  schema.rs  user.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-core/src/model/store/migrations/2024-07-29-095130_init/: down.sql  up.sql
crates/libs/lib-email/: Cargo.toml
crates/libs/lib-email/src/: config.rs  error.rs  lib.rs  sendgrid.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc-app/: Cargo.toml
crates/libs/lib-rpc-app/src/: lib.rs
crates/libs/lib-rpc-app/src/rpcs/: mod.rs  user_rpc.rs
crates/libs/lib-rpc-core/: Cargo.toml
crates/libs/lib-rpc-core/src/: error.rs  lib.rs  prelude.rs  rpc_params.rs  rpc_result.rs
crates/libs/lib-rpc-core/src/utils/: macro_utils.rs  mod.rs
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  resources.rs  rpc_result.rs  user_rpc.rs
crates/libs/lib-rpc/src/router/: from_resources.rs  into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: mod.rs  user_rpc.rs
crates/libs/lib-scraper/: Cargo.toml
crates/libs/lib-scraper/examples/: c00-scrape.rs
crates/libs/lib-scraper/src/: error.rs  lib.rs  main.rs  schema.rs  websites.rs
crates/libs/lib-scraper/src/schema/: article.rs  common.rs  mod.rs  nutrition.rs  recipe.rs
crates/libs/lib-scraper/src/tests/: tests_scraper_0_to_9.rs  tests_scraper_a.rs  tests_scraper_b.rs  tests_scraper_c.rs  tests_scraper_d.rs  tests_scraper_e.rs  tests_scraper_f.rs  tests_scraper_g.rs  tests_scraper_h.rs  tests_scraper_i.rs  tests_scraper_j.rs  tests_scraper_k.rs  tests_scraper_l.rs  tests_scraper_m.rs  tests_scraper_n.rs  tests_scraper_o.rs  tests_scraper_p.rs  tests_scraper_q.rs  tests_scraper_r.rs  tests_scraper_s.rs  tests_scraper_t.rs  tests_scraper_u.rs  tests_scraper_v.rs  tests_scraper_w.rs  tests_scraper_y.rs  tests_scraper_z.rs
crates/libs/lib-scraper/src/tests/support/: mod.rs  scraper.rs  websites.rs
crates/libs/lib-scraper/tests/: helpers.rs  prelude.rs  scraper_0_to_9_tests.rs  scraper_A_tests.rs  scraper_B_tests.rs  scraper_C_tests.rs  scraper_D_tests.rs  scraper_E_tests.rs  scraper_F_tests.rs  scraper_G_tests.rs  scraper_H_tests.rs  scraper_I_tests.rs  scraper_J_tests.rs  scraper_K_tests.rs  scraper_L_tests.rs  scraper_M_tests.rs  scraper_N_tests.rs  scraper_O_tests.rs  scraper_P_tests.rs  scraper_Q_tests.rs  scraper_R_tests.rs  scraper_S_tests.rs  scraper_T_tests.rs  scraper_U_tests.rs  scraper_V_tests.rs  scraper_W_tests.rs  scraper_Y_tests.rs  scraper_Z_tests.rs  websites.json
crates/libs/lib-scraper/tests/data/: abuelascounter.com.html  claudia.abril.com.br.html
crates/libs/lib-scraper/tests/support/: mod.rs  scraper.rs  support.rs  websites.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/handlers/: handlers_auth.rs  handlers_general.rs  handlers_rpc.rs  message.rs  mod.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_auth.rs  mw_res_map.rs
crates/libs/lib-web/src/routes/: mod.rs  routes_static.rs
crates/libs/lib-web/src/templates/: auth.rs  core.rs  general.rs  layouts.rs  mod.rs
crates/libs/lib-web/src/utils/: token.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_auth.rs  routes_general.rs  routes_rpc.rs
crates/services/web-server/src/web/templates/: auth.rs  core.rs  layouts.rs  mod.rs
crates/services/web-server/tests/: helpers.rs  routes_auth.rs  routes_general.rs
crates/services/web-server/tests/support/: assert.rs  mod.rs  server.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
deploy/: .env.sample
docs/: go.mod  hugo.yaml
examples/: gen_key.rs
migrations/: V1__init.sql
src/: app.rs  config.rs  ctx.rs  error.rs  lib.rs  main.rs  schema.rs  web.rs
src/crypt/: error.rs  mod.rs  password.rs  token.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  payloads.rs  user.rs
src/model/store/: error.rs  mock.rs  mod.rs  psql.rs
src/model/store/queries/: insert.rs  mod.rs
src/models/: mod.rs  payloads.rs  user.rs
src/queries/: mod.rs
src/services/: mod.rs
src/services/email/: error.rs  mod.rs  sendgrid.rs
src/services/repository/: mock.rs  mod.rs  psql.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  routes.rs  templates.rs
src/web/middleware/: auth.rs  ctx.rs  mod.rs  response.rs
src/web/routes/: auth.rs  general.rs
src/web/rpc/: mod.rs  user_rpc.rs
src/web/templates/: auth.rs  core.rs  general.rs  layouts.rs
tests/: helpers.rs  routes_auth.rs
web/app/: core.js  package-lock.json  package.json  tailwind.config.js  toast.js
web/docs/: go.mod  go.sum  hugo.yaml
web/docs/content/: _index.md
web/docs/i18n/: en.yaml  fr.yaml  sl.yaml
web/sponsors/: package-lock.json  package.json  sponsorkit.config.js
web/static/: robots.txt
web/static/css/: app.css  tailwind-custom.css  tailwind.css
web/static/img/: .cache.json
web/static/js/: core.min.js  toast.min.js
(+62 files in other folders)
