[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [ # e.g. rpc routing
    "crates/libs/lib-auth", # e.g. for password, token
    "crates/libs/lib-core", "crates/libs/lib-email", # e.g. base64, time
    "crates/libs/lib-rpc",
    # Application libraries
    "crates/libs/lib-utils", # e.g. model, ctx, config

    # Applications services
    "crates/services/web-server",

    # Tools
    "crates/tools/gen-key",
]
