[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [ # e.g. rpc routing
    "crates/libs/lib-auth",     # e.g. for password, token
    "crates/libs/lib-core",
    "crates/libs/lib-email",    # e.g. base64, time
    "crates/libs/lib-rpc-app",
    "crates/libs/lib-rpc-core",
    "crates/libs/lib-scraper",
    # Application libraries
    "crates/libs/lib-utils",
    "crates/libs/lib-web",   # e.g. model, ctx, config

    # Applications services
    "crates/services/web-server",

    # Tools
    "crates/tools/gen-key",
]

[workspace.dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
rpc-router = { version = "0.1.3" }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_with = "3.9.0"
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
