[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
derive_more = { workspace = true }
enum_dispatch = "0.3.13"
hmac = "0.12.1"
lazy-regex = "3.2.0"
lib-utils = { path = "../../libs/lib-utils" }
serde = { workspace = true }
sha2 = "0.10.8"
tokio = { workspace = true }
uuid = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
