[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
diesel = { version = "2.2.2", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5.0", features = [
    "postgres",
    "bb8",
    "async-connection-wrapper",
] }
diesel_migrations = "2.2.0"
dirs = "5.0.1"
lib-auth = { path = "../../libs/lib-auth" }
lib-email = { path = "../../libs/lib-email" }
lib-utils = { path = "../../libs/lib-utils" }
paste = "1.0.15"
rpc-router = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
whatlang = "0.16.4"

[dev-dependencies]
axum-test = "15.3.0"
pretty_assertions = "1.4.0"
reqwest = "0.12.5"


[features]
with-rpc = ["rpc-router"]

[lib]
doctest = false

[lints]
workspace = true
