[package]
name = "lib-rpc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }
paste = "1.0.15"
rpc-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

[lints]
workspace = true
