[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
lib-core = { path = "../../libs/lib-core" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_with = "3.9.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }

[lib]
doctest = false

[lints]
workspace = true
