[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
futures = "0.3.30"
lib-core = { path = "../../libs/lib-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
