[package]
name = "lib-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
iso8601 = { version = "0.6.1", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
url = {version = "2.5.2", features = ["serde"]}
async-trait = "0.1.81"
regex = "1.10.6"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lib]
doctest = false

[lints]
workspace = true
