[package]
name = "lib-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
derive_more = { workspace = true }
iso8601 = { version = "0.6.1", features = ["serde"] }
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.20.0"
serde = { workspace = true }
serde_json = { workspace = true }
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[lib]
doctest = false

[lints]
workspace = true
