[package]
name = "lib-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
derive_more = { workspace = true }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-email = { path = "../../libs/lib-email" }
lib-rpc-core = { path = "../../libs/lib-rpc-core" }
maud = { version = "*", features = ["axum"] }
rpc-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = "0.26.4"
tokio = { workspace = true }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
uuid = { workspace = true }
validator = { version = "0.18.1", features = ["derive"] }

[lints]
workspace = true
